# simple_network

./: CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt
apps/client/: CMakeLists.txt
apps/client/console_client/: CMakeLists.txt  log.txt  main.cpp
apps/server/: CMakeLists.txt
apps/server/console_server/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/logger/: CMakeLists.txt  logger.cpp  logger.h
libs/network/: CMakeLists.txt  client.cpp  log.txt  network.h  server.cpp
